--- a/006. 파일과 디렉터리 다루기.ipynb
+++ b/006. 파일과 디렉터리 다루기.ipynb
@@ -14,7 +14,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9ca1f444",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import pathlib\n",
@@ -28,7 +32,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c6d5bf1f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -50,7 +58,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "1b937dd0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -84,7 +96,10 @@
    "execution_count": 4,
    "id": "65ea626c",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -352,7 +367,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "a6af905f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#pathlib를 이용한 구현"
@@ -362,7 +381,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dcb12fe7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -629,7 +652,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "8db13823",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -677,7 +704,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "2c36db5a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -737,7 +768,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "84baad58",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -789,7 +824,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "067410f7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -834,7 +873,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "96498005",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -875,7 +918,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "c5ffa94a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -909,7 +956,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "11c7ac3a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil\n",
@@ -922,28 +973,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d33b863",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jupyter-jsmol",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "name": "jupyter-jsmol"
   }
  },
  "nbformat": 4,
