--- a/007. 데이터 저장하고 관리하기.ipynb
+++ b/007. 데이터 저장하고 관리하기.ipynb
@@ -565,7 +565,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98393425b09f2a127c35f6076028cdeda66758967327a1ff63dcb9cc31bf5341"
+   }
   }
  },
  "nbformat": 4,
